--- a/prototype/src/modules/ui/ahisSection/ahisSection.css
+++ b/prototype/src/modules/ui/ahisSection/ahisSection.css
@@ -29,7 +29,7 @@
 }
 
 .alert-icon {
-    --slds-c-icon-color-foreground-default: var(--slds-g-color-warning-1, #fe9339);
+    --slds-c-icon-color-foreground-default: #8C4B02;
 }
 
 .section-title {
